--- a/Master-Script.template
+++ b/Master-Script.template
@@ -1,3 +1,4 @@
+branch03
 {
     "AWSTemplateFormatVersion" : "2010-09-09",
     "Description"              : "Amazon WorkSpaces Deployment Template.  This template will deploy the resources needed to deploy a single Amazon WorkSpaces desktop.\n",
