--- a/Master-Script.template
+++ b/Master-Script.template
@@ -1,4 +1,5 @@
 #Dilshacomment
+#DilshanComment2
 {
     "AWSTemplateFormatVersion" : "2010-09-09",
     "Description"              : "Amazon WorkSpaces Deployment Template.  This template will deploy the resources needed to deploy a single Amazon WorkSpaces desktop.\n",
